Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129140

[REG] Lightprobe using texture data causes crash

    XMLWordPrintable

Details

    • macOS
    • 5da6347bd (dev), 9257e7520 (6.8), 6946dc164 (6.7), be300de9e (6.8.0), d2bd6c915 (tqtc/lts-6.5)

    Description

      This issue is introduced by fd9e4834da574, which was picked back to 6.5. Change does not cleanly revert, so need to quickly assess if a fix or a revert is the best option.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            stromme Christian
            stromme Christian
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes