Fix crash when using texture data

The initial texture data version was not set causing the data to never
be uploaded. Also fixes reusing QRhiTexture, as uploads can be empty.

This amends fd9e4834da57478dd31d387f568d40a3d22aa72f
3ee4118265492a4417dea27d7177fa67c90064df

Fixes: QTBUG-129140
Pick-to: 6.8.0 6.7 6.5
Change-Id: Ia1e310503cbd9568d668a3dfbca5117fc810e06d
Reviewed-by: Inho Lee <inho.lee@qt.io>
(cherry picked from commit 5da6347bdb07cc73259c4f850e734885ea52694f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>