src/runtimerender/resourcemanager/qssgrenderbuffermanager.cpp
@@ -262,7 +262,7 @@ QSSGRenderImageTexture QSSGBufferManager::loadTextureData(QSSGRenderTextureData 
     const CustomImageCacheKey imageKey = { data, data->size(), inMipMode };
     auto theImageData = customTextureMap.find(imageKey);
     if (theImageData == customTextureMap.end()) {
-        theImageData = customTextureMap.insert(imageKey, ImageData());
+        theImageData = customTextureMap.insert(imageKey, ImageData{{}, {}, data->version()});
     } else if (data->version() == theImageData->version) {
         // Return the currently loaded texture
         theImageData.value().usageCounts[currentLayer]++;
@@ -941,6 +941,15 @@ bool QSSGBufferManager::setRhiTexture(QSSGRenderImageTexture &texture,
     int depth = inFlags.testFlag(Texture3D) ? inTexture->depth : 0;
     bool generateMipmaps = false;
 
+    if (size.isEmpty()) {
+        qWarning() << "Could not use 0 sized texture";
+        return false;
+    } else if (!rhi->isTextureFormatSupported(rhiFormat)) {
+        qWarning() << "Unsupported texture format";
+        return false;
+    }
+
+
     if (wasTextureCreated)
         *wasTextureCreated = false;
 
@@ -1076,14 +1085,6 @@ bool QSSGBufferManager::setRhiTexture(QSSGRenderImageTexture &texture,
     static auto maxTextureSize = rhi->resourceLimit(QRhi::ResourceLimit::TextureSizeMax);
     const auto validTexSize = size.width() <= maxTextureSize && size.height() <= maxTextureSize;
     QSSG_ASSERT_X(validTexSize, qPrintable(textureSizeWarning(size, maxTextureSize)), return false);
-
-    if (textureUploads.isEmpty() || size.isEmpty() || rhiFormat == QRhiTexture::UnknownFormat) {
-        qWarning() << "Could not load texture";
-        return false;
-    } else if (!rhi->isTextureFormatSupported(rhiFormat)) {
-        qWarning() << "Unsupported texture format";
-        return false;
-    }
 
     QSSG_ASSERT(texture.m_texture != nullptr, return false);
 
